--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,11 @@ plugins {
 android {
     compileSdk 31
 
+    buildFeatures{
+        dataBinding = true
+        viewBinding = true
+
+    }
     defaultConfig {
         applicationId "com.example.words"
         minSdk 19
